click example more explicit

--- a/bricks/x-button.html
+++ b/bricks/x-button.html
@@ -1,7 +1,7 @@
 <template>
   <button @click="toggleText">
-    <span :if="state.showText">text displayed! 🎪</span>
-    <span :if="!state.showText">text hidden 🕵️‍♀️</span>
+    <span :if="state.showText">Wow, you're a clicker! 👾👾👾</span>
+    <span :if="!state.showText">Click me… 🎃</span>
   </button>
 </template>
 
