--- a/index.html
+++ b/index.html
@@ -7,25 +7,41 @@
 <h1>Lego webcomponents demo</h1>
 
 <article>
-  <h2>Display</h2>
-  <p>Minimalistic display</p>
-  <hello-world></hello-world>
-  <hello-world name="Hearth!"></hello-world>
+  <section>
+    <h2>Display</h2>
+    <p>Minimalistic display</p>
+    <hello-world></hello-world>
+    <hello-world name="Hearth!"></hello-world>
+  </section>
+  <aside>
+    <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fhello-world.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+  </aside>
 </article>
 
 <article>
-  <h2>Button</h2>
-  <p>Minimalistic button demo</p>
-  <x-button></x-button>
+  <section>
+    <h2>Button</h2>
+    <p>Minimalistic button demo</p>
+    <x-button></x-button>
+  </section>
+  <aside>
+    <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fx-button.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+  </aside>
 </article>
 
 <article>
-  <h2>Custom Events</h2>
-  <p>Tick called by a custom event</p>
-  <customevent-clock></customevent-clock>
+  <section>
+    <h2>Custom Events</h2>
+    <p>Tick called by a custom event</p>
+    <customevent-clock></customevent-clock>
+  </section>
+  <aside>
+    <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fcustomevent-clock.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+  </aside>
 </article>
 
 <article>
+  <section id=counter>
   <h2>Counter</h2>
   <p>This is a basic classical counter demo</p>
   <x-counter></x-counter>
@@ -38,6 +54,10 @@
       document.querySelector('x-counter').setAttribute('counter', count)
     })
   </script>
+  </section>
+  <aside>
+    <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fx-counter.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+  </aside>
 </article>
 
 <footer>
