--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <h1>Lego webcomponents demo</h1>
 
 <article>
-  <section>
-    <h2>Display</h2>
-    <p>Minimalistic display</p>
+  <section id="hello-world">
+    <h2>Hello World <a href="#hello-world">🔗</a></h2>
+    <p>Simple example with a default text and attributes override</p>
     <hello-world></hello-world>
-    <hello-world name="Hearth!"></hello-world>
+    <hello-world planet="Hearth!" icon="🌏"></hello-world>
   </section>
   <aside>
     <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fhello-world.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
@@ -19,9 +19,9 @@
 </article>
 
 <article>
-  <section>
-    <h2>Button</h2>
-    <p>Minimalistic button demo</p>
+  <section id="#buttons">
+    <h2>Button <a href="buttons">🔗</a></h2>
+    <p>Demonstrate state change when clicking a button</p>
     <x-button></x-button>
   </section>
   <aside>
@@ -30,10 +30,13 @@
 </article>
 
 <article>
-  <section>
-    <h2>Custom Events</h2>
-    <p>Tick called by a custom event</p>
-    <customevent-clock></customevent-clock>
+  <section id="world-clock">
+    <h2><a href="#world-clock">Isolated Instances</a></h2>
+    <p>A single component can be behave different with attributes.</p>
+    <p>Here are how countries display the same time:</p>
+    <world-clock></world-clock>
+    <world-clock country="fr"></world-clock>
+    <world-clock country="us"></world-clock>
   </section>
   <aside>
     <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fcustomevent-clock.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
@@ -41,19 +44,23 @@
 </article>
 
 <article>
+  <section id=tiles>
+    <h2>Color Tiling <a href="#tiles">🔗</a></h2>
+    <p>🖱️ Mouse over the block below</p>
+    <p>This demo is about <strong>reactive CSS</strong> with mouse event and setInterval 😎</p>
+    <x-tiles></x-tiles>
+  </section>
+  <aside>
+    <script
+      src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fx-counter.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+  </aside>
+</article>
+
+<article>
   <section id=counter>
-  <h2>Counter</h2>
-  <p>This is a basic classical counter demo</p>
-  <x-counter></x-counter>
-  <label>Inject the value from outside the component:</label>
-  <input id="counter-manual" type="number" title="Force the counter value from outside the component">
-  <script>
-    const input = document.getElementById('counter-manual')
-    input.addEventListener('change', (event) => {
-      const count = event.target.value
-      document.querySelector('x-counter').setAttribute('counter', count)
-    })
-  </script>
+    <h2>Counter <a href="#counter">🔗</a></h2>
+    <p>This shows how events can update the view</p>
+    <x-counter></x-counter>
   </section>
   <aside>
     <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fx-counter.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
@@ -83,3 +90,11 @@
 <!-- End Matomo Code -->
 
 </html>
+
+<style>
+  h2 a {
+    opacity: .8;
+    text-decoration: none;
+    font-size: 1rem;
+  }
+</style>
