added github embeded for tiles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <world-clock country="us"></world-clock>
   </section>
   <aside>
-    <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fcustomevent-clock.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+    <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fworld-clock.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
   </aside>
 </article>
 
@@ -52,7 +52,7 @@
   </section>
   <aside>
     <script
-      src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fx-counter.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+      src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FPolight%2Flego-demo%2Fblob%2Fmain%2Fbricks%2Fx-tile.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
   </aside>
 </article>
 
