demo with lego@beta2.0.0-beta.4

--- a/bricks/world-clock.html
+++ b/bricks/world-clock.html
@@ -1,7 +1,7 @@
 <script>
   const state = { time: new Date(), country: undefined }
 
-  function constructed() {
+  function connected() {
     setInterval(() => {
       this.render({ time: new Date() })
     }, 1000)
