--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </article>
 
 <article>
-  <section id="#buttons">
-    <h2>Button <a href="buttons">🔗</a></h2>
+  <section id="buttons">
+    <h2>Button <a href="#buttons">🔗</a></h2>
     <p>Demonstrate state change when clicking a button</p>
     <x-button></x-button>
   </section>
@@ -31,7 +31,7 @@
 
 <article>
   <section id="world-clock">
-    <h2><a href="#world-clock">Isolated Instances</a></h2>
+    <h2>Independant instances <a href="#world-clock">🔗</a></h2>
     <p>A single component can be behave different with attributes.</p>
     <p>Here are how countries display the same time:</p>
     <world-clock></world-clock>
