feat: demo with lego@1.10.1

--- a/bricks/hello-world.html
+++ b/bricks/hello-world.html
@@ -1,5 +1,7 @@
 <script>
-  const state = { icon: '🌎', planet: 'world' }
+  export default class extends Lego {
+    state = { icon: '🌎', planet: 'world' }
+  }
 </script>
 
 <template>
