--- a/bricks/x-tile.html
+++ b/bricks/x-tile.html
@@ -1,20 +1,20 @@
 <script>
-  const state = { red: 0, green: 0, blue: 0 }
-  const duration = 400
+  export default class extends Lego {
+    state = { red: 0, green: 0, blue: 0 }
+    duration = 400
 
-  const methods = {
     colorize() {
       this.render({
         red: (this.state.red + 33) % 255,
         green: (this.state.green + 55) % 255,
         blue: (this.state.blue + 77) % 255
       })
-    },
+    }
 
     reset() {
       clearInterval(this.state.loopId)
       this.render(state)
-    },
+    }
   }
 </script>
 
@@ -28,6 +28,6 @@
     height: 20px;
     display: inline-block;
     background-color: rgba(${state.red}, ${state.green}, ${state.blue});
-    transition: background-color ${ duration }ms linear;
+    transition: background-color ${ this.duration }ms linear;
   }
 </style>
